fabric/testdata/out/ing_setanta-spp-orchestrator-staging-get-swagger-yaml-service-stupsspporchestrator.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(4) \u0026\u0026
      Path(\"/swagger.yaml\") \u0026\u0026 Method(\"GET\") \u0026\u0026 JWTPayloadAllKV(\"sub\",
      \"stups_spp-orchestrator\") \u0026\u0026 Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"5d644909-2f88-11e9-b826-0a3d2718077c","deployment-id":"d-rzj77h4x8wn7gqnwjt6zh18sh","pipeline-id":"l-25dxnxjs786jap63ehk6141r6o"},"name":"setanta-spp-orchestrator-staging-get-swagger-yaml-service-stupsspporchestrator","namespace":"default"},"spec":{"rules":[{"host":"setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":" [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid")
      -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward", "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(4) && Path("/swagger.yaml") && Method("GET")
      && JWTPayloadAllKV("sub", "stups_spp-orchestrator") && Header("X-Forwarded-Proto",
      "https")
  creationTimestamp: "2019-06-17T13:46:35Z"
  generation: 1
  labels:
    controller-uid: 5d644909-2f88-11e9-b826-0a3d2718077c
    deployment-id: d-rzj77h4x8wn7gqnwjt6zh18sh
    pipeline-id: l-25dxnxjs786jap63ehk6141r6o
  name: setanta-spp-orchestrator-staging-get-swagger-yaml-service-stupsspporchestrator
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: setanta-spp-orchestrator-staging
    uid: 5d644909-2f88-11e9-b826-0a3d2718077c
  resourceVersion: "1357488743"
  uid: 53010e0f-9106-11e9-a3f0-065b20c8b844
spec:
  rules:
  - host: setanta-spp-orchestrator-staging.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-orchestrator-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: setanta-spp-orchestrator-staging
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
